# Python_Programming

./: .gitignore  .secrets.baseline  Foreword.md  Introduction.md  README.md  pyproject.toml
exercises/01_hello_world/: hello.py
exercises/02_variables_and_types/: types_demo.py
exercises/03_control_flow/: control_flow.py
exercises/04_functions/: functions.py
exercises/05_strings_and_lists/: strings_and_lists.py
exercises/06_dicts_and_sets/: dicts_and_sets.py
exercises/07_references_and_mutability/: references.py
exercises/08_classes/: classes.py
exercises/09_file_io/: file_io.py
exercises/10_linked_lists/: linked_list.py
exercises/11_closures_and_higher_order_functions/: closures.py
exercises/12_dataclasses_and_enums/: dataclasses_enums.py
exercises/13_operator_overloading/: operator_overloading.py
exercises/14_inheritance/: inheritance.py
exercises/15_abc_and_protocols/: abc_protocols.py
exercises/16_exceptions/: exceptions_demo.py
exercises/17_decorators/: decorators.py
exercises/18_generators_and_iterators/: generators.py
exercises/19_context_managers/: context_managers.py
exercises/20_typing_and_generics/: typing_generics.py
exercises/21_modules_and_packages/: main.py
exercises/22_testing_with_pytest/: calculator.py  test_calculator.py
exercises/23_binary_search_tree/: bst.py
exercises/24_stack_and_queue/: stack_and_queue.py
exercises/25_sorting_and_searching/: sorting.py
exercises/26_hash_table/: hash_table.py
exercises/27_threading/: threading_demo.py
exercises/28_multiprocessing/: multiprocessing_demo.py
(+29 files in other folders)
