[project]
name = "python-programming"
version = "0.1.0"
description = "A structured Python learning project covering fundamentals through systems programming"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Exercises favor short, obviously-scoped names (n, i, x) for teaching clarity.
"exercises/*" = ["E741"]
# This exercise's whole point is demonstrating typing.Optional/Union by name.
"exercises/20_typing_and_generics/*" = ["UP007", "UP045"]

[tool.pytest.ini_options]
testpaths = ["exercises", "topics"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
